cleanup and better examples

--- a/examples/example_1_2.html
+++ b/examples/example_1_2.html
@@ -1,21 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>CSS-Bestagon: Example 1.2</title>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="../public/stylesheets/main.css" />
-    <link rel="stylesheet" href="./resources/style.css" />
-  </head>
-  <body>
-    <h1>Example 1.2</h1>
-    <div class="bestagon-rows-odd example">
-      <div class="bestagon-row">
-        <div class="bestagon-cell">1</div>
-      </div>
-      <div class="bestagon-row">
-        <div class="bestagon-cell">2</div>
-        <div class="bestagon-cell">3</div>
-      </div>
+
+<head>
+  <title>CSS-Bestagon: Example 1.2</title>
+  <meta charset="utf-8" />
+  <link rel="stylesheet" href="../public/stylesheets/main.css" />
+  <link rel="stylesheet" href="./resources/style.css" />
+</head>
+
+<body>
+  <h1>Example 1.2</h1>
+  <div class="bestagon-columns example">
+
+    <div class="bestagon-column">
+      <div class="bestagon-cell">1</div>
+      <div class="bestagon-cell">2</div>
+      <div class="bestagon-cell">3</div>
+      <div class="bestagon-cell">4</div>
+      <div class="bestagon-cell">5</div>
     </div>
-  </body>
+
+    <div class="bestagon-column">
+      <div class="bestagon-cell">6</div>
+      <div class="bestagon-cell">7</div>
+      <div class="bestagon-cell">8</div>
+      <div class="bestagon-cell">9</div>
+      <div class="bestagon-cell">10</div>
+    </div>
+
+    <div class="bestagon-column">
+      <div class="bestagon-cell">11</div>
+      <div class="bestagon-cell">12</div>
+      <div class="bestagon-cell">13</div>
+      <div class="bestagon-cell">14</div>
+      <div class="bestagon-cell">15</div>
+    </div>
+
+    <div class="bestagon-column">
+      <div class="bestagon-cell">16</div>
+      <div class="bestagon-cell">17</div>
+      <div class="bestagon-cell">18</div>
+      <div class="bestagon-cell">19</div>
+      <div class="bestagon-cell">20</div>
+    </div>
+
+    <div class="bestagon-column">
+      <div class="bestagon-cell">21</div>
+      <div class="bestagon-cell">22</div>
+      <div class="bestagon-cell">23</div>
+      <div class="bestagon-cell">24</div>
+      <div class="bestagon-cell">25</div>
+    </div>
+
+  </div>
+</body>
+
 </html>
