--- a/examples/example_1_3.html
+++ b/examples/example_1_3.html
@@ -2,26 +2,36 @@
 <html lang="en">
 
 <head>
-  <title>CSS-Bestagon: Example 1.1</title>
+  <title>CSS-Bestagon: Example 1.3</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../public/stylesheets/main.css" />
   <link rel="stylesheet" href="./resources/style.css" />
 </head>
 
 <body>
-  <h1>Example 1.1</h1>
+  <h1>Example 1.3</h1>
   <div class="bestagon-rows example">
 
     <div class="bestagon-row">
+      <div class="bestagon-space"></div>
+      <div class="bestagon-space"></div>
       <div class="bestagon-cell">1</div>
-      <div class="bestagon-cell">2</div>
-      <div class="bestagon-cell">3</div>
-      <div class="bestagon-cell">4</div>
-      <div class="bestagon-cell">5</div>
     </div>
 
     <div class="bestagon-row">
+      <div class="bestagon-space"></div>
+      <div class="bestagon-cell">2</div>
+      <div class="bestagon-cell">3</div>
+    </div>
+
+    <div class="bestagon-row">
+      <div class="bestagon-space"></div>
+      <div class="bestagon-cell">4</div>
+      <div class="bestagon-cell">5</div>
       <div class="bestagon-cell">6</div>
+    </div>
+
+    <div class="bestagon-row">
       <div class="bestagon-cell">7</div>
       <div class="bestagon-cell">8</div>
       <div class="bestagon-cell">9</div>
@@ -34,22 +44,6 @@
       <div class="bestagon-cell">13</div>
       <div class="bestagon-cell">14</div>
       <div class="bestagon-cell">15</div>
-    </div>
-
-    <div class="bestagon-row">
-      <div class="bestagon-cell">16</div>
-      <div class="bestagon-cell">17</div>
-      <div class="bestagon-cell">18</div>
-      <div class="bestagon-cell">19</div>
-      <div class="bestagon-cell">20</div>
-    </div>
-
-    <div class="bestagon-row">
-      <div class="bestagon-cell">21</div>
-      <div class="bestagon-cell">22</div>
-      <div class="bestagon-cell">23</div>
-      <div class="bestagon-cell">24</div>
-      <div class="bestagon-cell">25</div>
     </div>
 
   </div>
