--- a/examples/example_2_4.html
+++ b/examples/example_2_4.html
@@ -2,28 +2,23 @@
 <html lang="en">
 
 <head>
-  <title>CSS-Bestagon: Example 3.1</title>
+  <title>CSS-Bestagon: Example 2.4</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../public/stylesheets/main.css" />
   <link rel="stylesheet" href="./resources/style.css" />
 </head>
 
 <body>
-  <h1>Example 3.1</h1>
-  <div class="bestagon-rows example">
+  <h1>Example 2.4</h1>
+  <div class="bestagon-columns-odd example">
 
-    <div class="bestagon-row">
+    <div class="bestagon-column">
       <div class="bestagon-cell">1</div>
+    </div>
+
+    <div class="bestagon-column">
       <div class="bestagon-cell">2</div>
-    </div>
-
-    <div class="bestagon-row">
       <div class="bestagon-cell">3</div>
-    </div>
-
-    <div class="bestagon-row">
-      <div class="bestagon-cell">4</div>
-      <div class="bestagon-cell">5</div>
     </div>
 
   </div>
