build script and version added

--- a/examples/example_1_3.html
+++ b/examples/example_1_3.html
@@ -4,8 +4,8 @@
 <head>
   <title>CSS-Bestagon: Example 1.3</title>
   <meta charset="utf-8" />
-  <link rel="stylesheet" href="../public/stylesheets/main.css" />
-  <link rel="stylesheet" href="./resources/style.css" />
+  <link rel="stylesheet" href="./resources/bestagon.css" />
+  <link rel="stylesheet" href="./resources/example-styles.css" />
 </head>
 
 <body>
