--- a/examples/example_1_3.html
+++ b/examples/example_1_3.html
@@ -5,7 +5,16 @@
   <title>CSS-Bestagon: Example 1.3</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="./resources/bestagon.css" />
-  <link rel="stylesheet" href="./resources/example-styles.css" />
+  <style>
+    .example {
+      --bestagon-gap: 0.5rem;
+      --bestagon-size: 8rem;
+    }
+
+    .bestagon-cell {
+      background-color: #ff5100;
+    }
+  </style>
 </head>
 
 <body>
