--- a/examples/example_1_1.html
+++ b/examples/example_1_1.html
@@ -5,7 +5,16 @@
   <title>CSS-Bestagon: Example 1.1</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="./resources/bestagon.css" />
-  <link rel="stylesheet" href="./resources/example-styles.css" />
+  <style>
+    .example {
+      --bestagon-gap: 0.5rem;
+      --bestagon-size: 8rem;
+    }
+
+    .bestagon-cell {
+      background-color: #ff5100;
+    }
+  </style>
 </head>
 
 <body>
@@ -50,6 +59,14 @@
       <div class="bestagon-cell">23</div>
       <div class="bestagon-cell">24</div>
       <div class="bestagon-cell">25</div>
+    </div>
+
+    <div class="bestagon-row">
+      <div class="bestagon-cell">26</div>
+      <div class="bestagon-cell">27</div>
+      <div class="bestagon-cell">28</div>
+      <div class="bestagon-cell">29</div>
+      <div class="bestagon-cell">30</div>
     </div>
 
   </div>
