--- a/examples/example_3_1.html
+++ b/examples/example_3_1.html
@@ -7,32 +7,64 @@
   <link rel="stylesheet" href="./resources/bestagon.css" />
   <style>
     .example {
-      --bestagon-gap: 0.5rem;
+      --bestagon-gap: 0rem;
       --bestagon-size: 10rem;
     }
 
+    .bestagon-cell.cat {
+      background-image: url("./resources/cat.jpg");
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+
     .bestagon-cell {
-      background-color: #ff5100;
+      background-color: rgb(82, 196, 82);
+    }
+
+    .bestagon-cell.blue {
+      background-color: rgb(104, 104, 250);
     }
   </style>
 </head>
 
 <body>
   <h1>Example 3.1</h1>
-  <div class="bestagon-rows example">
+  <div class="bestagon-rows-odd example">
 
     <div class="bestagon-row">
-      <div class="bestagon-cell">1</div>
-      <div class="bestagon-cell">2</div>
+      <div class="bestagon-cell">
+        <h2>meow!</h2>
+        <p>1</p>
+      </div>
+      <div class="bestagon-cell blue">
+        <h2>meow!</h2>
+        <p>2</p>
+      </div>
     </div>
 
     <div class="bestagon-row">
-      <div class="bestagon-cell">3</div>
+      <div class="bestagon-cell blue">
+        <h2>meow!</h2>
+        <p>3</p>
+      </div>
+      <div class="bestagon-cell cat"></div>
+
+      <div class="bestagon-cell">
+        <h2>meow!</h2>
+        <p>4</p>
+      </div>
     </div>
 
     <div class="bestagon-row">
-      <div class="bestagon-cell">4</div>
-      <div class="bestagon-cell">5</div>
+      <div class="bestagon-cell">
+        <h2>meow!</h2>
+        <p>5</p>
+      </div>
+      <div class="bestagon-cell blue">
+        <h2>meow!</h2>
+        <p>6</p>
+      </div>
     </div>
 
   </div>
